<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Focus Flow</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="resume">继续</string>
    <string name="reset">重置</string>
    <string name="white_noise">白噪音</string>
    <string name="rain">雨声</string>
    <string name="wave">海浪</string>
    <string name="notification_channel_name">番茄钟服务</string>
    <string name="notification_channel_description">番茄钟后台运行通知</string>
    <string name="notification_title">番茄钟运行中</string>
    <string name="notification_text">专注时间：%02d:%02d</string>
    <string name="settings">设置</string>
    <string name="settings_title">设置</string>
    <string name="sync_countdown_and_audio">是否同步倒计时和音频</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="set_custom_time">设置自定义时间</string>
    <string name="enter_minutes">请输入分钟数：</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="invalid_time_range">请输入1-120之间的数字</string>
    <string name="time_selection">时间选择</string>
    <string name="minutes_10">10分钟</string>
    <string name="minutes_20">20分钟</string>
    <string name="minutes_30">30分钟</string>
    <string name="custom">自定义</string>
    <string name="reminder">提醒事宜</string>
    <string name="reminder_time_hint">时间</string>
    <string name="reminder_text_hint">提醒内容</string>
    <string name="minutes">分钟</string>
    <string name="reminder_notification">提醒</string>
    <string name="invalid_reminder_time">提醒时间必须小于总时长</string>
    <string name="add_reminder">添加提醒</string>
    <string name="delete_reminder">删除提醒</string>
    <string name="no_reminders">暂无提醒，点击下方添加</string>
    <string name="view_reminders">查看提醒事宜</string>
    <string name="set_timer">设置倒计时</string>
    <string name="timer_minutes">倒计时分钟数</string>
    <string name="minutes_5">5分钟</string>
    <string name="minutes_15">15分钟</string>
    <string name="minutes_25">25分钟</string>
    <string name="minutes_45">45分钟</string>
    <string name="minutes_60">60分钟</string>
</resources>